--- a/public/details.html
+++ b/public/details.html
@@ -67,5 +67,6 @@
   <div id="notification" class="notification"></div>
 
   <script src="details.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
